stretch challenge - create a reset action & trigger with reset button + stop running when reset

--- a/timers-app/src/components/TimerView.css
+++ b/timers-app/src/components/TimerView.css
@@ -1,37 +1,49 @@
 .TimerView {
-    width: 300px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
     border: 1px solid #000;
-    padding: 5%;
-    margin: 5% auto;
+    padding: 2% 5%;
     background-color: black;
     border: 2px solid greenyellow;
     border-radius: 30px;
+    margin: 10px;
+    width: 20%;
 }
 
 .TimerView > h1 {
 	margin: 1rem;
 	text-align: left;
 	font-family: monospace;
-    font-size: 3rem;
+    font-size: 2rem;
     color: greenyellow;
 }
 
 .TimerView > h2 {
     color: white;
+    text-align: left;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.TimerView > button {
+.TimerView > .ButtonGroup > button {
 	padding: 0.5rem 1rem;
     text-align: center;
 	border-radius: 10px;
     border: 2px solid transparent;
-	color: black;
+	color: rgb(3, 1, 1);
+    background-color: whitesmoke;
 	font-size: 1rem;
 	font-weight: bold;
     margin: 5% 0;
-    width: 100px;
+    width: 45%;
+}
+
+.ButtonGroup {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
 }
